# blob_detection_2-ax

./: CMakeLists.txt  README.md  main.cpp
communication/: mavlinkCommand.cpp  mavlinkCommand.h
controls/: controls.cpp  controls.h  testControls.cpp
videoProc/: testVideoProc.cpp  videoProc.cpp  videoProc.h
